<resources>
    <string name="app_name">Demo App</string>
    <string name="action_settings">Settings</string>

    <string name="menu_call">Call List</string>
    <string name="menu_buy">Buy List</string>
    <string name="menu_sell">Sell List</string>
    <string name="menu_crash">Crash demo</string>
    <string name="menu_send_log">Send record to AWS PinPoint</string>
    <string name="menu_login">Login Cognito</string>
    <string name="menu_logout">Logout Cognito</string>
    <string name="menu_biometric">Login biometric</string>

    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>

    <string name="title_name">Name: %s</string>
    <string name="title_number">Number: %s</string>
    <string name="title_price">Price: %s</string>
    <string name="title_quantity">Quantity: %s</string>

    <string name="message_do_not_have_data">Do not have data</string>
    <string name="login_button">Login and save pass</string>
    <string name="get_saved_pass_button">Get saved pass</string>
    <string name="register_biometric">Register Login Biometric</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="secret_key_name_case1">biometric_sample_encryption_key_1</string>

    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>

</resources>