<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="android.com.demo.ui.mainMenu.MainMenuViewModel" />

        <variable
            name="actions"
            type="android.com.demo.ui.mainMenu.MainMenuActions" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_20dp"
        android:paddingRight="@dimen/margin_20dp">

        <Button
            android:id="@+id/btnMenuCall"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> actions.onClickCallButton()}"
            android:text="@string/menu_call"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintBottom_toTopOf="@+id/btnMenuBuy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnMenuBuy"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:onClick="@{() -> actions.onClickBuyButton()}"
            android:text="@string/menu_buy"
            app:layout_constraintBottom_toTopOf="@+id/btnMenuSell"
            app:layout_constraintTop_toBottomOf="@+id/btnMenuCall" />

        <Button
            android:id="@+id/btnMenuSell"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:onClick="@{() -> actions.onClickSellButton()}"
            android:text="@string/menu_sell"
            app:layout_constraintBottom_toTopOf="@+id/btnCrash"
            app:layout_constraintTop_toBottomOf="@+id/btnMenuBuy" />

        <Button
            android:id="@+id/btnCrash"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:onClick="@{() -> actions.onClickCrashButton()}"
            android:text="@string/menu_crash"
            app:layout_constraintBottom_toTopOf="@+id/btnSendPinPointLog"
            app:layout_constraintTop_toBottomOf="@+id/btnMenuSell" />

        <Button
            android:id="@+id/btnSendPinPointLog"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:onClick="@{() -> actions.onClickSendLogButton()}"
            android:text="@string/menu_send_log"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCrash" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>