<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--do not set label here, because it will be updated in code-->
    <fragment
        android:id="@+id/nav_home"
        android:name="android.com.demo.ui.mainMenu.MainMenuFragment"
        tools:layout="@layout/fragment_main_menu">

        <action
            android:id="@+id/action_nav_home_to_callListFragment"
            app:destination="@id/callListFragment"
            app:enterAnim="@anim/slide_right_enter"
            app:exitAnim="@anim/slide_left_exit"
            app:popEnterAnim="@anim/slide_left_enter"
            app:popExitAnim="@anim/slide_right_exit" />
        <action
            android:id="@+id/action_nav_home_to_buyListFragment"
            app:destination="@id/buyListFragment"
            app:enterAnim="@anim/slide_right_enter"
            app:exitAnim="@anim/slide_left_exit"
            app:popEnterAnim="@anim/slide_left_enter"
            app:popExitAnim="@anim/slide_right_exit" />
        <action
            android:id="@+id/action_nav_home_to_sellListFragment"
            app:destination="@id/sellListFragment"
            app:enterAnim="@anim/slide_right_enter"
            app:exitAnim="@anim/slide_left_exit"
            app:popEnterAnim="@anim/slide_left_enter"
            app:popExitAnim="@anim/slide_right_exit" />
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_right_enter"
            app:exitAnim="@anim/slide_left_exit"
            app:popEnterAnim="@anim/slide_left_enter"
            app:popExitAnim="@anim/slide_right_exit"/>
    </fragment>
    <fragment
        android:id="@+id/callListFragment"
        android:name="android.com.demo.ui.mainMenu.callList.CallListFragment"
        android:label="@string/menu_call"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/buyListFragment"
        android:name="android.com.demo.ui.mainMenu.buyList.BuyListFragment"
        android:label="@string/menu_buy"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/sellListFragment"
        android:name="android.com.demo.ui.mainMenu.sellList.SellListFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="android.com.demo.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="LoginFragment" />

</navigation>